Correção template novo_evento

--- a/cEventos/cEventos/core/templates/base.html
+++ b/cEventos/cEventos/core/templates/base.html
@@ -61,10 +61,11 @@
         </nav>
 
         
+        {% block index %} 
+        {% endblock index %}
+            
         <div class="container">
             {% block body %}
-
-            
             {% endblock body %}
         </div>
             
