--- a/cEventos/cEventos/eventos/templates/eventos/novo_evento.html
+++ b/cEventos/cEventos/eventos/templates/eventos/novo_evento.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="{{ form.titulo.id_for_label }}">Título</label>
-            {{ form.titulo|add_class:"form-control" }}
+            {{ form.titulo|add_class:"form-control"|attr:'autofocus'}}
         </div>
         <div class="form-group">
             <label for="{{ form.local.id_for_label }}">Local</label>
@@ -34,11 +34,11 @@
         <div class="row">
             <div class="form-group col-md-6">
                 <label for="{{ form.data_inicial.id_for_label }}">Data Inicial</label>
-                <input type="date" name="data_inicial" id="form.data_inicial" class="form-control">
+                <input type="date" name="data_inicial" class="form-control" required id="data_inicial">
             </div>
             <div class="form-group col-md-6">
                 <label for="{{ form.data_final.id_for_label }}">Data Final</label>
-                <input type="date" name="data_final" id="form.data_final" class="form-control">
+                <input type="date" name="data_final" class="form-control" required id="data_final">
             </div>
         </div>
         <div class="form-group">
