--- a/cEventos/cEventos/eventos/templates/eventos/lista_eventos.html
+++ b/cEventos/cEventos/eventos/templates/eventos/lista_eventos.html
@@ -1,35 +1,45 @@
 {% extends "base.html" %}
 <div class="row">
     {% block body %}
-    <p>
+        <p></p>
         <center>
             <h1>Eventos</h1>
         </center>
-    </p>
-    {% if eventos %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Título</th>
-                <th>Local</th>
-            </tr>
-            <tbody>
-                {% for e in eventos %}
-                <tr>
-                    <td>
-                        {{e.titulo}}
-                    </td>
-                    <td>
-                        {{ e.local }}
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </thead>
-    </table>
-    {% else %}
-    <center>
-        <h4>Sem Eventos</h4>
-    </center>
-    {% endif %} {% endblock body %}
+        <div align="right">
+            <a href="{% url 'eventos:novo_evento' %}" class="btn btn-primary" role="button">Novo Evento</a>
+        </div>
+        <p></p>
+        {% if eventos %}
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Título</th>
+                            <th>Local</th>
+                            <th colspan="2" style="text-align:center">Ações</th>
+                        </tr>
+                        <tbody>
+                            {% for e in eventos %}
+                                <tr>
+                                    <td>
+                                        {{e.titulo}}
+                                    </td>
+                                    <td>
+                                        {{ e.local }}
+                                    </td>
+                                    <td>
+                                        <a href="{% url 'eventos:editar_evento' e.id %}" class="btn btn-info btn-xs">Editar</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </thead>
+                </table>
+            </div>
+        {% else %}
+            <center>
+                <h4>Sem Eventos</h4>
+            </center>
+        {% endif %}
+    {% endblock body %}
 </div>
