--- a/cEventos/cEventos/core/templates/base.html
+++ b/cEventos/cEventos/core/templates/base.html
@@ -6,50 +6,67 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="{% static "img/wolf.ico" %}">
+        <link rel="icon" href="{% static 'img/wolf.ico' %}">
 
         <title>Caça Eventos</title>
 
         <!-- Bootstrap core CSS -->
-        <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="{% static "css/jumbotron.css" %}" rel="stylesheet">
+        <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
     </head>
 
     <body style="background-color:rgb(250, 250, 250)">
-
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a href="{% url 'core' %}"><img src="{% static "img/wolf2.png" %}" alt="Wolf" width="42" height="42"></a>
-            <pre> </pre>
-            <a class="navbar-brand" href="{% url 'core' %}">Caça Eventos</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'core' %}">Home
-                            <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item active dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eventos</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="{% url 'eventos:novo_evento' %}">Novo Evento</a>
-                            <a class="dropdown-item" href="{% url 'eventos:lista_eventos' %}">Listar Eventos</a>
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                <a href="{% url 'core' %}"><img src="{% static "img/wolf2.png" %}" alt="Wolf" width="42" height="42"></a>
+                <pre> </pre>
+                <a class="navbar-brand" href="{% url 'core' %}">Caça Eventos</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                    {% if user.is_authenticated %}
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'core' %}">Home
+                                    <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item active dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eventos</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                    <a class="dropdown-item" href="{% url 'eventos:novo_evento' %}">Novo Evento</a>
+                                    <a class="dropdown-item" href="{% url 'eventos:lista_eventos' %}">Listar Eventos</a>
+                                </div>
+                            </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Buscar Eventos" aria-label="Search">
+                        </form>
+                        <p>&nbsp&nbsp</p>
+                        <ul class="nav navbar-nav navbar-right">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default">{{ user.get_full_name|default:user.username }}</button>
+                                <button type="button" class="btn btn-default dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="sr-only">Toggle Dropdown</span>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" href="">Alterar senha</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="">Sair</a>
+                                </div>
+                            </div>
+                        </ul>
+                    {% else %}
+                        <!-- AJEITAR ESSE BOTAO!!!!!!!-->
+                        <div align="right">
+                            <a href="{% url 'accounts:user_login' %}" class="btn btn-primary" role="button">Entrar</a>
                         </div>
-                    </li>
-                    <!-- <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li> <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">Dropdown</a> <div class="dropdown-menu" aria-labelledby="dropdown01"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
-                    </div> </li> -->
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Buscar Eventos" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-                </form>
-            </div>
-        </nav>
+                    {% endif %}
+                </div>
+            </nav>
+        </div>
 
         {% block index %}{% endblock index %}
 
