Criação da view Logout e alterações nas telas de login, add_user e base

--- a/cEventos/cEventos/accounts/templates/accounts/add_user.html
+++ b/cEventos/cEventos/accounts/templates/accounts/add_user.html
@@ -24,7 +24,7 @@
                 {{ form.last_name|add_class:'form-control' }}
             </div>
             <div class="form-group">
-                <label for="{{ form.email.id_for_label }}">Email</label>
+                <label for="{{ form.email.id_for_label }}">E-mail</label>
                 {{ form.email|add_class:'form-control'|attr:'type:email' }}
             </div>
             <div class="form-group">
