--- a/cEventos/cEventos/core/templates/base.html
+++ b/cEventos/cEventos/core/templates/base.html
@@ -54,7 +54,7 @@
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <a class="dropdown-item" href="">Alterar senha</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="">Sair</a>
+                                    <a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Sair</a>
                                 </div>
                             </div>
                         </ul>
