--- a/cEventos/cEventos/accounts/templates/accounts/user_login.html
+++ b/cEventos/cEventos/accounts/templates/accounts/user_login.html
@@ -36,21 +36,25 @@
                 {% csrf_token %}
                 <h2 class="form-signin-heading" align="center">Faça login</h2>
                 {% if messages %}
-                    <div class="alert-success" role="alert">
-                        {% for message in messages %}
-                            {{ message }}
+                    {% for message in messages %}
+                        {% if message.level == 40 %}
+                            <div class="alert alert-danger" role="alert">
+                            {% elif message.level == 25 %}
+                                <div class="alert alert-success" role="alert">
+                                {% endif %}
+                                {{ message }}
+                            </div>
                         {% endfor %}
-                    </div>
-                    <p></p>
-                {% endif %}
-                <label for="username" class="sr-only">Usuario</label>
-                <input type="text" id="username" name="username" class="form-control" placeholder="Informe o usuario" required="required" autofocus="autofocus">
-                <label for="password" class="sr-only">Senha</label>
-                <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Informe a senha do ususario" required="required">
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-                <a href="{% url 'accounts:add_user' %}" class="btn btn-lg btn-info btn-block">Não tem cadastro?</a>
-            </form>
+                        <p></p>
+                    {% endif %}
+                    <label for="username" class="sr-only">Usuario</label>
+                    <input type="text" id="username" name="username" class="form-control" placeholder="Informe o usuario" required="required" autofocus="autofocus">
+                    <label for="password" class="sr-only">Senha</label>
+                    <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Informe a senha do ususario" required="required">
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+                    <a href="{% url 'accounts:add_user' %}" class="btn btn-lg btn-info btn-block">Não tem cadastro?</a>
+                </form>
 
-        </div>
-    </body>
-</html>
+            </div>
+        </body>
+    </html>
