atualizaçao base.html

--- a/cEventos/cEventos/accounts/templates/accounts/user_login.html
+++ b/cEventos/cEventos/accounts/templates/accounts/user_login.html
@@ -29,7 +29,7 @@
 
             <form class="form-signin" method="post">
                 <div class="text-center">
-                    <a href="{% url 'core' %}"><img src="{% static "img/wolf.ico" %}" alt="lf" width="72" height="72"></a>
+                    <a href="{% url 'core' %}"><img src="{% static "img/wolf.ico" %}" alt="" width="72" height="72"></a>
                 </div>
                 <p></p>
                 {% csrf_token %}
