--- a/cEventos/cEventos/accounts/templates/accounts/add_user.html
+++ b/cEventos/cEventos/accounts/templates/accounts/add_user.html
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label for="{{ form.password.id_for_label }}">Senha</label>
-                {{ form.password|add_class:'form-control'|attr:'type:password' }}
+                <input type="password" name="password" maxlength="128" required="required" id="id_password" class="form-control">
             </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
             <a href="{% url 'accounts:user_login' %}">Fazer login</a>
