--- a/cEventos/cEventos/accounts/templates/accounts/user_login.html
+++ b/cEventos/cEventos/accounts/templates/accounts/user_login.html
@@ -11,7 +11,7 @@
         <meta name="author" content="">
         <link rel="icon" href="{% static 'img/wolf.ico' %}">
 
-        <title>Login</title>
+        <title>Caça Eventos</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
