Correções na tela de adicionar usuario

--- a/cEventos/cEventos/core/templates/base.html
+++ b/cEventos/cEventos/core/templates/base.html
@@ -62,7 +62,7 @@
                         <ul class="navbar-nav mr-auto"></ul>
                         <ul class="nav navbar-nav navbar-right">
                             <div padding-right="30px" align="right">
-                                <a href="{% url 'accounts:user_login' %}" class="btn btn-primary" role="button">Entrar</a>
+                                <a href="{% url 'accounts:user_login' %}" class="btn btn-primary" role="button">Login</a>
                                 <a href="{% url 'accounts:add_user' %}" class="btn btn-primary" role="button">Cadastrar-se</a>
                             </div>
                         </ul>
