--- a/cEventos/cEventos/core/templates/core/index.html
+++ b/cEventos/cEventos/core/templates/core/index.html
@@ -5,7 +5,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-3">Caça Eventos!</h1>
-            <p>Hello, world da aplicação Caça Eventos</p>
+            <p>Hello world da aplicação Caça Eventos</p>
             <p>
                 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a>
             </p>
