Correçao tela de Login

--- a/cEventos/cEventos/accounts/templates/accounts/user_login.html
+++ b/cEventos/cEventos/accounts/templates/accounts/user_login.html
@@ -33,7 +33,7 @@
                 </div>
                 <p></p>
                 {% csrf_token %}
-                <h2 class="form-signin-heading" align="center">Faça login</h2>
+                <h2 class="form-signin-heading" align="center">Login</h2>
                 {% if messages %}
                     {% for message in messages %}
                         {% if message.level == 40 %}
