criação da view de mudança de senha

--- a/cEventos/cEventos/accounts/templates/accounts/user_login.html
+++ b/cEventos/cEventos/accounts/templates/accounts/user_login.html
@@ -47,9 +47,9 @@
                         <p></p>
                     {% endif %}
                     <label for="username" class="sr-only">Usuario</label>
-                    <input type="text" id="username" name="username" class="form-control" placeholder="Informe o usuario" required="required" autofocus="autofocus">
+                    <input type="text" id="username" name="username" class="form-control" placeholder="Informe o usuário" required="required" autofocus="autofocus">
                     <label for="password" class="sr-only">Senha</label>
-                    <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Informe a senha do ususario" required="required">
+                    <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Informe a senha do usuário" required="required">
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
                     <a href="{% url 'accounts:add_user' %}" class="btn btn-lg btn-info btn-block">Não tem cadastro?</a>
                 </form>
