--- a/cEventos/cEventos/accounts/templates/accounts/add_user.html
+++ b/cEventos/cEventos/accounts/templates/accounts/add_user.html
@@ -31,11 +31,15 @@
                 <label for="{{ form.username.id_for_label }}">Usuário</label>
                 {{ form.username|add_class:'form-control'|attr:'required' }}
             </div>
-            <div class="form-group">
-                <label for="{{ form.password.id_for_label }}">Senha</label>
-                <input type="password" name="password" maxlength="128" required="required" id="id_password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
+            {% if not user.is_authenticated %}
+                <div class="form-group">
+                    <label for="{{ form.password.id_for_label }}">Senha</label>
+                    <input type="password" name="password" maxlength="128" required="required" id="id_password" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-primary">Cadastrar</button>
+            {% else %}
+                <button type="submit" class="btn btn-primary">Salvar</button>
+            {% endif %}
             <!--BOTAO DE VOLTAR PARA PAGINA ANTERIOR-->
             <input type="button" value="Voltar" onclick="history.back(-1)" class="btn btn-primary"/>
         </form>
