--- a/cEventos/cEventos/core/templates/base.html
+++ b/cEventos/cEventos/core/templates/base.html
@@ -33,12 +33,9 @@
                                 <a class="nav-link" href="{% url 'core' %}">Home
                                     <span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item active dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eventos</a>
-                                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                                    <a class="dropdown-item" href="{% url 'eventos:novo_evento' %}">Novo Evento</a>
-                                    <a class="dropdown-item" href="{% url 'eventos:lista_eventos' %}">Listar Eventos</a>
-                                </div>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'eventos:lista_eventos' %}">Eventos
+                                    <span class="sr-only">(current)</span></a>
                             </li>
                         </ul>
                         <form class="form-inline my-2 my-lg-0">
@@ -54,7 +51,6 @@
                                     <span class="sr-only">Toggle Dropdown</span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a class="dropdown-item" href="{% url 'accounts:edit_user' %}">Editar cadastro</a>
                                     <a class="dropdown-item" href="{% url 'accounts:change_password' %}">Alterar senha</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Sair</a>
